:sparkles: add pitagoras function

--- a/c_to_assembly.ipynb
+++ b/c_to_assembly.ipynb
@@ -96,6 +96,43 @@
     "ret\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pitagoras\n",
+    "\n",
+    "```a\n",
+    "# prólogo\n",
+    "pushl %ebp\n",
+    "movl %esp, %epb\n",
+    "subl $12, %esp\n",
+    "\n",
+    "# temp1 = c1 * c1\n",
+    "movl 8(%ebp), %eax\n",
+    "imull 8(%ebp), %eax\n",
+    "movl %eax, -8(%ebp)\n",
+    "\n",
+    "# temp2 = c2 * c2\n",
+    "movl 12(%ebp), %eax\n",
+    "imull 12(%ebp), %eax\n",
+    "movl %eax, -12(%ebp)\n",
+    "\n",
+    "# temp1 = temp1 + temp2\n",
+    "movl -8(%ebp), %eax\n",
+    "addl -12(%ebp), %eax\n",
+    "movl %eax, -4(%ebp)\n",
+    "\n",
+    "# return value\n",
+    "movl -4(%ebp) %eax\n",
+    "\n",
+    "#epílogo\n",
+    "movl %ebp, %esp\n",
+    "popl %ebp\n",
+    "ret\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
@@ -107,16 +144,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": ""
   },
   "orig_nbformat": 4
  },
