:sparkles: finish exercise1

--- a/c_to_assembly.ipynb
+++ b/c_to_assembly.ipynb
@@ -81,16 +81,42 @@
     "### main\n",
     "\n",
     "```a\n",
+    "#prologo\n",
     "push %ebp\n",
     "movl %esp, %ebp\n",
     "subl $8, %esp\n",
     "\n",
+    "# printf(\"teclea dos numeros:);\n",
     "pushl $s0\n",
     "call printf\n",
-    "addl $4\n",
+    "addl $4, %esp\n",
     "\n",
+    "#scanf(\"%d%d\", &a, &b);\n",
+    "leal -8(%ebp), %eax\n",
+    "pushl %eax\n",
+    "leal -4(%ebp), %eax\n",
+    "pushl %eax\n",
+    "pushl $s1\n",
+    "call scanf\n",
+    "addl $12, %esp\n",
+    "\n",
+    "#h2 = pitagoras(a, b);\n",
+    "pushl -8(%ebp)\n",
+    "pushl -4(%ebp)\n",
+    "call pitagoras\n",
+    "addl $8, %esp\n",
+    "movl %eax, h2\n",
+    "\n",
+    "#printf(\"La hipotenusa es %d\\n\", h2)\n",
+    "pushl h2\n",
+    "pushl $s3\n",
+    "call printf\n",
+    "addl $8, %esp\n",
+    "\n",
+    "#ret value\n",
     "movl $0, %eax\n",
     "\n",
+    "#prólogo\n",
     "movl %ebp, %esp\n",
     "popl %ebp\n",
     "ret\n",
