:sparkles: add exercise 2 velocidad

--- a/c_to_assembly.ipynb
+++ b/c_to_assembly.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "### main\n",
     "\n",
-    "```a\n",
+    "````a\n",
     "#prologo\n",
     "push %ebp\n",
     "movl %esp, %ebp\n",
@@ -120,7 +120,7 @@
     "movl %ebp, %esp\n",
     "popl %ebp\n",
     "ret\n",
-    "```"
+    "````"
    ]
   },
   {
@@ -157,6 +157,88 @@
     "movl %ebp, %esp\n",
     "popl %ebp\n",
     "ret\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
+    "\n",
+    "```c\n",
+    "int d, t;\n",
+    "int velocidad(int d, int t) {\n",
+    "    int temp;\n",
+    "    temp = d / t;\n",
+    "    return temp;\n",
+    "} // fin de velocidad()\n",
+    "\n",
+    "int main() {\n",
+    "    int v;\n",
+    "    printf(\"teclea dos numeros : \");\n",
+    "    scanf(\"%d%d\", &d, &t);\n",
+    "    v = velocidad(d, t);\n",
+    "    printf(\"La velocidad es %d\\n\", v);\n",
+    "    return 0;\n",
+    "} // fin de main()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activation framework: Velocidad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Framework: Velocidad| Dirección |Responsabilidad|\n",
+    "|:-:|:-:|:-:|\n",
+    "|t                    |   12 + epb        |main               |\n",
+    "|d | 8 + ebp | main |\n",
+    "|return address|4 + ebp | main |\n",
+    "|Dynamic Link| ebp | velocidad|\n",
+    "| temp | 4 - ebp | velocidad |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assembler code: Velocidad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```a\n",
+    "\n",
+    "#prólogo\n",
+    "\n",
+    "push %ebp\n",
+    "movl %esp, %ebp\n",
+    "subl $4, %esp\n",
+    "\n",
+    "#temp = d/t\n",
+    "\n",
+    "movl $8, %eax\n",
+    "movl $12, %ebx\n",
+    "cdq\n",
+    "idivl %ebx\n",
+    "movl %eax, -4(%ebp)\n",
+    "\n",
+    "movl -4(%ebp), %eax\n",
+    "\n",
+    "#epílogo\n",
+    "movl %ebp, %esp\n",
+    "popl %ebp\n",
+    "ret\n",
+    "\n",
     "```"
    ]
   }
