:sparkles: add main activation framework  exercise 2

--- a/c_to_assembly.ipynb
+++ b/c_to_assembly.ipynb
@@ -241,6 +241,24 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activation Framework: Main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Framework: Main | Dirección |Responsabilidad |\n",
+    "|:-:|:-:|:-:|\n",
+    "| Return Address | 4 + ebp | caller |\n",
+    "| Dynamic Link | ebp | caller |\n",
+    "| v | 4 - ebp| main |"
+   ]
   }
  ],
  "metadata": {
