:sparkles: add main assembler exercise 2

--- a/c_to_assembly.ipynb
+++ b/c_to_assembly.ipynb
@@ -259,6 +259,65 @@
     "| Dynamic Link | ebp | caller |\n",
     "| v | 4 - ebp| main |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assembler code: Main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```a\n",
+    "\n",
+    "# Prólogo\n",
+    "pushl %ebp \n",
+    "movl %esp, %ebp\n",
+    "subl $4, %esp\n",
+    "\n",
+    "# printf(\"teclea dos números\");\n",
+    "\n",
+    "pushl $s3\n",
+    "call printf\n",
+    "addl $4, %esp\n",
+    "\n",
+    "# scanf(\"%d%d\", &d, &t);\n",
+    "\n",
+    "pushl t\n",
+    "pushl d\n",
+    "push $s4\n",
+    "call scanf\n",
+    "\n",
+    "addl $12, %esp\n",
+    "\n",
+    "# v = velocidad(d, t);\n",
+    "\n",
+    "pushl t\n",
+    "pushl -4(%ebp)\n",
+    "call velocidad\n",
+    "addl $8, %esp\n",
+    "movl %eax, -4(%ebp)\n",
+    "\n",
+    "# printf(\"La velocidad es %d\\n\", v);\n",
+    "\n",
+    "pushl -4(%ebp)\n",
+    "pushl $s4\n",
+    "call printf\n",
+    "addl $8, %esp\n",
+    "\n",
+    "#prólogo\n",
+    "\n",
+    "movl $0, %eax\n",
+    "\n",
+    "movl %epb, %esp\n",
+    "popl %epb\n",
+    "ret\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
