:sparkles: add main exercise 3 assembler

--- a/c_to_assembly.ipynb
+++ b/c_to_assembly.ipynb
@@ -318,6 +318,235 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function porcentaje:\n",
+    "\n",
+    "```c\n",
+    "    int p, pm;\n",
+    "    int porcentaje(int t, int n) {\n",
+    "    int temp1, temp2;\n",
+    "    temp1 = t * n;\n",
+    "    temp2 = temp1 / 100;\n",
+    "    return temp2;\n",
+    "} // fin de porcentaje()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activation Framework: porcentaje\n",
+    "\n",
+    "|Activation Framework: Porcentaje | Posición | Responsabilidad |\n",
+    "|:-:|:-:|:-:|\n",
+    "| n | 12 + ebp | main |\n",
+    "| t | 8 + ebp | main |\n",
+    "|Return address| 4 + ebp | main|\n",
+    "|Dynamic link | ebp | porcentaje|\n",
+    "| temp1 | 4 - ebp | porcentaje |\n",
+    "| temp2 | 8 - ebp | porcentaje |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assembler code: Porcentaje"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```a\n",
+    "# prólogo\n",
+    "\n",
+    "pushl %ebp\n",
+    "movl %esp, %ebp\n",
+    "subl $8, %esp\n",
+    "\n",
+    "# temp1 = t * n ;\n",
+    "\n",
+    "movl 8(%ebp), %eax\n",
+    "imull 12(%ebp), %eax\n",
+    "movl %eax, -4(%ebp)\n",
+    "\n",
+    "# temp2 = temp1 / 100;\n",
+    "\n",
+    "movl -4(%ebp), %eax\n",
+    "movl $100, %ebx\n",
+    "cqd\n",
+    "idvl %ebx\n",
+    "movl %eax, -8(%ebp)\n",
+    "\n",
+    "movl -8(%ebp), %eax\n",
+    "\n",
+    "movl %ebp, %esp\n",
+    "popl %ebp\n",
+    "ret\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Función main C:\n",
+    "\n",
+    "```c\n",
+    "int main() {\n",
+    "    int h, m, ph;\n",
+    "    printf(”Numero de personas : \");\n",
+    "    scanf(\"%d\", &p);\n",
+    "    printf(”Numero de hombres : \");\n",
+    "    scanf(\"%d\", &h);\n",
+    "    printf(”Numero de mujeres : \");\n",
+    "    scanf(\"%d\", &m);\n",
+    "    pm = porcentaje(p, m);\n",
+    "    printf(”El porcentaje de mujeres es %d\\n\", pm);\n",
+    "    ph = porcentaje(p, h);\n",
+    "    printf(”El porcentaje de hombres es %d\\n\", ph);\n",
+    "    return 0;\n",
+    "} // fin de main()\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activation Framework: Main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Activation Framework: Main | Posición | Resposabilidad |\n",
+    "|:-:|:-:|:-:|\n",
+    "|Return address| 4 + ebp| caller |\n",
+    "|Dynamic Link| ebp | caller |\n",
+    "| h | 4 - ebp | main |\n",
+    "| m | 8 - ebp | main |\n",
+    "| ph | 12 - ebp | main |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assembler code: Main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```a\n",
+    "\n",
+    "# prólogo\n",
+    "\n",
+    "pushl %ebp\n",
+    "movl %esp, %ebp\n",
+    "subl $12, %esp\n",
+    "\n",
+    "# printf(\"Numero de personas : );\n",
+    "\n",
+    "pushl $s0\n",
+    "call printf\n",
+    "addl $4, %esp\n",
+    "\n",
+    "#scanf(\"%d\", &p);\n",
+    "\n",
+    "pushl p\n",
+    "pushl $s1\n",
+    "call scanf\n",
+    "addl $8, %esp\n",
+    "\n",
+    "# printf(\"Numero de hombres:\");\n",
+    "\n",
+    "pushl $s2\n",
+    "call printf\n",
+    "add $4, %esp\n",
+    "\n",
+    "# scanf(\"%d\", &h);\n",
+    "leal -4(%ebp), %eax\n",
+    "pushl %eax\n",
+    "pushl $s3\n",
+    "call scanf\n",
+    "addl $8, %esp\n",
+    "\n",
+    "# printf(\"Numero de mujeres:\");\n",
+    "\n",
+    "pushl $s4\n",
+    "call printf\n",
+    "addl $4, %esp\n",
+    "\n",
+    "# scanf(\"$%d\", &m);\n",
+    "\n",
+    "leal -8(%ebp), %eax\n",
+    "pushl %eax\n",
+    "pushl $s5\n",
+    "call scanf\n",
+    "addl $8, %esp\n",
+    "\n",
+    "# pm = porcentaje(p, m);\n",
+    "\n",
+    "pushl -8(%ebp)\n",
+    "pushl p\n",
+    "call porcentaje\n",
+    "addl $8, %esp\n",
+    "movl %eax, pm\n",
+    "\n",
+    "# printf(\"El porcentaje de mujeres es %d\\n\", pm);\n",
+    "\n",
+    "pushl pm\n",
+    "pushl $s6\n",
+    "call printf \n",
+    "\n",
+    "addl $8, %esp\n",
+    "\n",
+    "# ph = porcentaje(p, h)\n",
+    "\n",
+    "pushl -4(%ebp)\n",
+    "pushl p\n",
+    "call porcentaje\n",
+    "addl $8, %esp\n",
+    "movl %eax, -12(%ebp) \n",
+    "\n",
+    "# printf(\"El porcentaje de hombres es %d\\n\", ph);\n",
+    "\n",
+    "pushl -12(%ebp)\n",
+    "pushl $s7\n",
+    "call printf\n",
+    "\n",
+    "addl $8, %esp\n",
+    "\n",
+    "# epílogo\n",
+    "\n",
+    "movl $0, %eax\n",
+    "movl %ebp, %esp\n",
+    "popl %epb\n",
+    "\n",
+    "ret\n",
+    "\n",
+    "\n",
+    "````"
+   ]
   }
  ],
  "metadata": {
