:sparkles: add abstract

--- a/c_to_assembly.ipynb
+++ b/c_to_assembly.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises "
+    "# Exercises: C to Assembler\n",
+    "\n",
+    "Exercises of basic c sentences (arithmetic operations, calling functions, and input output c functions)"
    ]
   },
   {
