:sparkles: add main advanced exercise 1 assembly

--- a/c_to_assembly_advanced.ipynb
+++ b/c_to_assembly_advanced.ipynb
@@ -8,6 +8,105 @@
     "\n",
     "Exercises of advanced C to Assembly, using loops and if statements."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### C code:\n",
+    "\n",
+    "```c\n",
+    "/******** factorial recursivo ********/\n",
+    "#include <stdio.h>\n",
+    "int m;\n",
+    "\n",
+    "int fact(int n) {\n",
+    "    if (n <= 1)\n",
+    "        return 1;\n",
+    "    else\n",
+    "        return n * fact(n-1);\n",
+    "    } // fin de fact()\n",
+    "\n",
+    "int main(int argc, char* argv[]) {\n",
+    "    int n;printf(\"Teclea un entero\\n\");\n",
+    "    scanf(\"%d\", &n);\n",
+    "    m = fact(n);\n",
+    "    printf(\"El factorial de %d = %d\\n\", n, m);\n",
+    "    return 0;\n",
+    "} // fin de main()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activation Framework: Main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Activation Framework: Main| Posición | Responsabilidad |\n",
+    "|:-:|:-:|:-:|\n",
+    "|argv| 12 + ebp| caller |\n",
+    "|argc| 8 + ebp| caller|\n",
+    "|Return Address| 4 + ebp| caller|\n",
+    "|Dynamic Link| ebp | main|\n",
+    "|n | 4 - ebp | main |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```s\n",
+    "# Prólogo\n",
+    "pushl %ebp\n",
+    "movl %esp , %ebp\n",
+    "subl $4, %esp\n",
+    "\n",
+    "# printf(\"Teclea un entero\\n);\n",
+    "pushl $s0\n",
+    "call printf\n",
+    "addl $4, %esp\n",
+    "\n",
+    "#scanf(\"%d\", &n);\n",
+    "leal -4(%ebp), %eax\n",
+    "pushl %eax\n",
+    "pushl $s1\n",
+    "call scanf\n",
+    "addl $8, %esp\n",
+    "\n",
+    "#m = fact(n);\n",
+    "\n",
+    "pushl -4(%ebp)\n",
+    "call fact\n",
+    "addl $4, %esp\n",
+    "movl %eax, m\n",
+    "\n",
+    "#printf(\"El factorial de %d = %d\\n\", n , m);\n",
+    "pushl m\n",
+    "pushl -4(%ebp)\n",
+    "pushl $s2\n",
+    "call printf\n",
+    "addl $12, %esp\n",
+    "\n",
+    "#epílogo\n",
+    "movl $0, %eax\n",
+    "movl %ebp, %esp\n",
+    "popl %ebp\n",
+    "ret\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
