:sparkles: activation framework advanced exercise 1 funct fact

--- a/c_to_assembly_advanced.ipynb
+++ b/c_to_assembly_advanced.ipynb
@@ -107,6 +107,19 @@
     "ret\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activation Frame: Fact\n",
+    "|Activation Framework: Fact| Posición | Responsabilidad |\n",
+    "|:-:|:-:|:-:|\n",
+    "| n | 8 + ebp | main |\n",
+    "| Return Address | 4 + ebp | main |\n",
+    "| Dynamic Link | ebp | main |\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
