:sparkles: add advanced exercise 1 assembly function fact

--- a/c_to_assembly_advanced.ipynb
+++ b/c_to_assembly_advanced.ipynb
@@ -120,6 +120,38 @@
     "| Dynamic Link | ebp | main |\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```c\n",
+    "# prólogo\n",
+    "pushl %ebp\n",
+    "movl %esp, %ebp\n",
+    "\n",
+    "movl 8(%ebp), %eax\n",
+    "cmp $1, %eax\n",
+    "lg L2\n",
+    "movl $1, %eax\n",
+    "jmp L1\n",
+    "\n",
+    "L2: \n",
+    "    movl 8(%ebp), %eax\n",
+    "    subl $1, %eax\n",
+    "    pushl %eax\n",
+    "    call fact\n",
+    "    addl $4, %esp\n",
+    "    movl %eax, %ebx\n",
+    "    movl 8(%ebp), %eax\n",
+    "    imull %ebx, %eax\n",
+    "\n",
+    "L1:\n",
+    "    movl %ebp, %esp\n",
+    "    popl %ebp\n",
+    "    ret\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
