:spakles: add advanced exercise 2 activation framework

--- a/c_to_assembly_advanced.ipynb
+++ b/c_to_assembly_advanced.ipynb
@@ -152,6 +152,28 @@
     "    ret\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activation Framework\n",
+    "\n",
+    "|Activation framework: Main| Posición | Responsabilidad |\n",
+    "|:-:|:-:|:-:|\n",
+    "|argv| ebp + 12 | caller |\n",
+    "|argc| ebp + 8 | caller |\n",
+    "|Return address| ebp + 4 | caller |\n",
+    "|Dynamic Link | ebp | main |\n",
+    "|mayor | ebp - 4| main |"
+   ]
   }
  ],
  "metadata": {
