:sparkles: add advanced exercise 2 c code

--- a/c_to_assembly_advanced.ipynb
+++ b/c_to_assembly_advanced.ipynb
@@ -164,6 +164,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```c\n",
+    "/******** mayor de tres numeros ********/\n",
+    "#include <stdio.h>\n",
+    "int a, b, c;\n",
+    "int main(int argc, char* argv[]) {\n",
+    "    int mayor;\n",
+    "    printf(\"Teclea tres enteros: \");\n",
+    "    scanf(\"%d%d%d\", &a, &b, &c);\n",
+    "    if (a >= b && a >= c)\n",
+    "    mayor = a;\n",
+    "    else if (b >= a && b >= c)\n",
+    "    mayor = b;\n",
+    "    else\n",
+    "    mayor = c;\n",
+    "    printf(\"El mayor es %d = %d\\n\", mayor);\n",
+    "    return 0;\n",
+    "} // fin de main()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Activation Framework\n",
     "\n",
     "|Activation framework: Main| Posición | Responsabilidad |\n",
