:sparkles: add assembler code advanced exercise 2

--- a/c_to_assembly_advanced.ipynb
+++ b/c_to_assembly_advanced.ipynb
@@ -198,6 +198,75 @@
     "|Dynamic Link | ebp | main |\n",
     "|mayor | ebp - 4| main |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assembly Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```a\n",
+    "    # prólogo\n",
+    "    push %ebp\n",
+    "    movl %esp, %ebp\n",
+    "    subl $4, %esp\n",
+    "\n",
+    "    # printf(\"Teclea tres enteros: );\n",
+    "\n",
+    "    pushl $s0\n",
+    "    call printf\n",
+    "    addl $4, %esp\n",
+    "\n",
+    "    # scanf(\"%d%d%d\", &a, &b, &c);\n",
+    "\n",
+    "    pushl c\n",
+    "    pushl b\n",
+    "    pushl a\n",
+    "    pushl $s1\n",
+    "    call scanf\n",
+    "    addl $16, %esp\n",
+    "\n",
+    "    movl a, %eax\n",
+    "    movl b, %ebx\n",
+    "    movl c, %ecx\n",
+    "\n",
+    "    cmp %ebx, %eax\n",
+    "    jl L2\n",
+    "    cmp %ecx, %eax\n",
+    "    jl L2\n",
+    "    movl %eax, -4(%ebp)\n",
+    "\n",
+    "    L2 :\n",
+    "        cmp %eax, %ebx\n",
+    "        jl L3\n",
+    "        cmp %ecx, %ebx\n",
+    "        jl L3\n",
+    "        movl b, -4(%ebp)\n",
+    "    \n",
+    "    L3:\n",
+    "        movl c, -4(%ebp)\n",
+    "    \n",
+    "    #printf(\"El mayor es %d = %d \\n\", mayor)\n",
+    "    pushl -4(%ebp)\n",
+    "    pushl $s2\n",
+    "    call printf\n",
+    "    addl $8, %esp\n",
+    "\n",
+    "\n",
+    "    #prólogo\n",
+    "    movl $0, %eax\n",
+    "    movl %ebp, %esp\n",
+    "    popl %ebp\n",
+    "\n",
+    "    ret\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
