:sparkles: activation framework of mcd exercise 3

--- a/c_to_assembly_advanced.ipynb
+++ b/c_to_assembly_advanced.ipynb
@@ -267,6 +267,90 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```c\n",
+    "#include <stdio.h>\n",
+    "int y;\n",
+    "\n",
+    "int mcd(int a, int b)\n",
+    "{\n",
+    "    int resto;\n",
+    "    while (b != 0)\n",
+    "    {\n",
+    "        resto = a % b;\n",
+    "        a = b;\n",
+    "        b = resto;\n",
+    "    }\n",
+    "    return a;\n",
+    "}\n",
+    "\n",
+    "main()\n",
+    "{\n",
+    "    int x;\n",
+    "    printf(\"introduce dos enteros :\");\n",
+    "    scanf(\"%d%d\", &x, &y);\n",
+    "    printf(\"El mcd de %d y %d vale %d\\n\", x, y, mcd(x, y));\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activation Framework: mcd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Activation Framework: mcd | Posición | Responsabilidad |\n",
+    "|:-:|:-:|:-:|\n",
+    "| b | 12 + ebp | main |\n",
+    "| a | 8 + ebp | main |\n",
+    "| Return address| 4 + ebp | main |\n",
+    "| Dynamic Link | ebp | mcd |\n",
+    "| resto | 4 - ebp | mcd |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assembly Code: mcd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```a\n",
+    "pushl %ebp\n",
+    "movl %esp, %ebp\n",
+    "subl $4, %esp\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```a\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
