:sparkles: add advanced exercise 3 assembly code

--- a/c_to_assembly_advanced.ipynb
+++ b/c_to_assembly_advanced.ipynb
@@ -337,10 +337,32 @@
    "metadata": {},
    "source": [
     "```a\n",
+    "# Prólogo\n",
+    "\n",
     "pushl %ebp\n",
     "movl %esp, %ebp\n",
     "subl $4, %esp\n",
-    "```"
+    "\n",
+    "L1: \n",
+    "    cmp $0, b\n",
+    "    je L2\n",
+    "\n",
+    "movl a, %eax\n",
+    "movl b, %ebx\n",
+    "cdq\n",
+    "idvl %ebx\n",
+    "movl %edx, %eax\n",
+    "movl %eax, -4(%ebp)\n",
+    "movl a, b\n",
+    "movl -4(%ebp), b\n",
+    "jmp L1\n",
+    "\n",
+    "L2:\n",
+    "    movl a, %eax\n",
+    "    movl %ebp, %esp\n",
+    "    popl %ebp\n",
+    "    ret\n",
+    "```\n"
    ]
   },
   {
