--- a/c_to_assembly_advanced.ipynb
+++ b/c_to_assembly_advanced.ipynb
@@ -347,13 +347,13 @@
     "    cmp $0, b\n",
     "    je L2\n",
     "\n",
-    "movl a, %eax\n",
-    "movl b, %ebx\n",
+    "movl 8(%ebp), %eax\n",
+    "movl 12(%ebp), %ebx\n",
     "cdq\n",
     "idvl %ebx\n",
     "movl %edx, %eax\n",
     "movl %eax, -4(%ebp)\n",
-    "movl a, b\n",
+    "movl 8(%ebp), 12(%ebp)\n",
     "movl -4(%ebp), b\n",
     "jmp L1\n",
     "\n",
