:sparkles: add activation framework main advanced exercise 3

--- a/c_to_assembler/c_to_assembly_advanced.ipynb
+++ b/c_to_assembler/c_to_assembly_advanced.ipynb
@@ -369,6 +369,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Activation Framework: Main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Activation Framework: Main | Posición | Responsabilidad |\n",
+    "|:-:| :-:|:-:|\n",
+    "|Return Address| 4 + ebp| Caller|\n",
+    "|Dynamic link | ebp | main |\n",
+    "| x | 4 - ebp | main|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```a\n",
     "\n",
     "```"
@@ -377,10 +402,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "3a682bb36f7d5a7672b2d733006b37b2d8aca078566e2b1120c995bec970a554"
+   "hash": "919c7ce7a74021c6cd98257225c7c731a5c39ce25eb8800a5dd524e2eb8700bf"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit (windows store)",
+   "display_name": "Python 3.8.10  ('.env': venv)",
    "name": "python3"
   },
   "language_info": {
