:sparkles: add advanced exercise 3 main assembly code

--- a/c_to_assembler/c_to_assembly_advanced.ipynb
+++ b/c_to_assembler/c_to_assembly_advanced.ipynb
@@ -384,11 +384,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Assembly code: Main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```a\n",
+    "# prólogo \n",
+    "push %ebp\n",
+    "movl %esp, %ebp\n",
+    "subl $4, %esp\n",
+    "\n",
+    "# printf(\"introduce dos enteros :\");\n",
+    "\n",
+    "pushl $s0\n",
+    "call printf\n",
+    "add $4, %esp\n",
+    "\n",
+    "# scanf(\"%d%d\", &x, &y);\n",
+    "\n",
+    "pushl y\n",
+    "leal -4(%ebp), %eax\n",
+    "pushl %eax\n",
+    "pushl $s1\n",
+    "call scanf\n",
+    "addl $12, %esp\n",
+    "\n",
+    "# printf(\"El mcd de %d y %d vale %d\\n\", x, y, mcd(x, y));\n",
+    "\n",
+    "pushl y\n",
+    "pushl -4(%ebp)\n",
+    "call mcd\n",
+    "add $8, %esp\n",
+    "\n",
+    "pushl %eax\n",
+    "pushl y\n",
+    "pushl -4(%ebp)\n",
+    "pushl $s2\n",
+    "call printf\n",
+    "addl $16, %esp\n",
+    "\n",
+    "# prólogo\n",
+    "\n",
+    "pushl $0, %eax\n",
+    "movl %ebp, %esp\n",
+    "popl %ebp\n",
+    "ret\n",
+    "\n",
+    "\n",
+    "\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
